# metalmq

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.pytest  Makefile  README.md  docker-compose.yml  metalmq-docker.toml  metalmq.toml  rustfmt.toml
.github/workflows/: main.yml
amqp-compliance/: README.md  heartbeat.py  helper.py  pyproject.toml  pyrightconfig.json  requirements.txt  test_basic_deliver.py  test_basic_get.py  test_connect.py  test_consumer_tag.py  test_declare.py  test_exchange.py  test_exchange_types.py  test_pubsub.py  test_queue.py
benches/: Cargo.toml  encoder.rs
client091/: Cargo.toml  Pipfile
client091/src/: client.rs  codec.rs  frame.rs  main.rs
examples/: Cargo.toml  basic.rs  pub_cons.rs
ironmq/: Cargo.toml
ironmq-client/: Cargo.toml
ironmq-client/src/: client.rs  client_sm.rs  lib.rs  main.rs
ironmq-client/tests/: conn.rs
ironmq-codec/: Cargo.toml
ironmq-codec/src/: codec.rs  frame.rs  lib.rs
ironmq-test/: Cargo.toml
ironmq-test/src/: lib.rs
ironmq/src/: client.rs  client_conn.rs  conn_state.rs  exchange.rs  main.rs  message.rs  queue.rs
ironmq/src/client/: conn.rs  state.rs
ironmq/src/exchange/: handler.rs  manager.rs
ironmq/src/queue/: handler.rs  manager.rs
ironmq/tests/: conn.rs  consume.rs  exchange.rs  publish.rs
ironmq/tests/helper/: conn.rs
metalmq/: Cargo.toml
metalmq-client/: Cargo.toml  README.md
metalmq-client/benches/: delivery.rs
metalmq-client/features/: connect.feature  exchange.feature
metalmq-client/src/: bdd.rs  channel_api.rs  channel_api.rs_  client.rs  client.rs_  client_api.rs  client_api.rs_  client_sm.rs  client_sm.rs_  consumer.rs  dev.rs  error.rs  lib.rs  lib.rs_  message.rs  model.rs  processor.rs  state.rs
metalmq-client/src/processor/: processor_tests.rs
metalmq-client/tests/: acceptance.rs  conn.rs  exchange.rs
metalmq-client/tests/it/: confirm.rs  direct.rs  exchange.rs  fanout.rs  get.rs  helper.rs  main.rs  queue.rs  topic.rs
metalmq-codec/: Cargo.toml
metalmq-codec/benches/: encode.rs
metalmq-codec/src/: codec.rs  frame.rs  lib.rs  tests.rs
metalmq-codec/src/frame/: basic.rs  channel.rs  connection.rs  exchange.rs  mod.rs  queue.rs
metalmq-codec/tests/: decode.rs  encode.rs  queue.rs
metalmq-test/: Cargo.toml
metalmq-test/src/: lib.rs
metalmq/features/: exchange.feature
metalmq/src/: client.rs  config.rs  error.rs  exchange.rs  main.rs  message.rs  queue.rs  restapi.rs
metalmq/src/client/: channel.rs  conn.rs  connection.rs  handler.rs  mod.rs  state.rs
metalmq/src/client/channel/: basic.rs  content.rs  exchange.rs  open_close.rs  queue.rs  router.rs  types.rs
metalmq/src/client/connection/: open_close.rs  router.rs  tests.rs  types.rs
metalmq/src/client/state/: basic.rs  channel.rs  connect.rs  exchange.rs  queue.rs  receive_message.rs  tests.rs
metalmq/src/client/tests/: connect.rs  mod.rs
metalmq/src/exchange/: binding.rs  handler.rs  manager.rs  mod.rs
metalmq/src/exchange/handler/: mod.rs  tests.rs
metalmq/src/queue/: consumer_handler.rs  handler.rs  manager.rs  mod.rs
metalmq/src/queue/handler/: consumer.rs  inmemory.rs  mod.rs  outbox.rs  tests.rs
metalmq/src/tests/: connect.rs  consume.rs  mod.rs  publish.rs  queue.rs  recv.rs  sut.rs  test_case.rs  test_client.rs
metalmq/tests/: acceptance.rs  conn.rs  consume.rs  exchange.rs  helper.rs  publish.rs
metalmq/tests/helper/: conn.rs
metalmq/tests/it/: connection.rs  consume.rs  exchange.rs  helper.rs  main.rs  publish.rs  queue_auto_delete.rs
src/: main.rs
