[package]
name = "ironmq"
version = "0.1.0"
authors = ["Richard Jonas <richard.jonas@erlang-solutions.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.7"
log = "0.4"
tokio = { version = "0.3", features = ["full"] }
