[package]
name = "benches"
version = "0.0.0"
publish = false
edition = "2018"

[dependencies]
bencher = "0.1"
bytes = "1"
metalmq-codec = { version = "0.2", path = "../metalmq-codec" }
tokio-util = { version = "0.6", features = ["codec"] }

[[bench]]
name = "encoder"
path = "encoder.rs"
harness = false
