[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2018"

[dev-dependencies]
anyhow = "1.0"
#console-subscriber = { version = "0", path="../../../rust/console/console-subscriber" }
env_logger = "0.7"
log = "0.4"
metalmq-client = { version = "0.2", path = "../metalmq-client" }
rand = "0"
tokio = { version = "1", features = ["full"] }

[[example]]
name = "basic"
path = "basic.rs"

[[example]]
name = "publish-consume"
path = "pub_cons.rs"
