[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2021"

[dev-dependencies]
anyhow = "1.0"
#console-subscriber = { version = "0", path="../../../rust/console/console-subscriber" }
metalmq-client = { version = "0.3", path = "../metalmq-client" }
tokio = { version = "1", features = ["rt-multi-thread"] }

[[example]]
name = "basic"
path = "basic.rs"

[[example]]
name = "publish-consume"
path = "pub_cons.rs"
