[package]
name = "ironmq-client"
version = "0.1.0"
authors = ["Richard Jonas <richard.jonas.76@gmail.com>"]
edition = "2018"
keywords = ["amqp", "messaging"]
repository = "https://github.com/jonasrichard/ironmq"
description = "IromMQ client library (AMQP 0.9)"

[dependencies]
bytes = "0.6"
env_logger = "0.7"
futures = "0.3"
ironmq-codec = { path = "../ironmq-codec" }
lazy_static = "1.4"
log = "0.4"
tokio = { version = "0.3", features = ["full"] }
tokio-util = { version = "0.5", features = ["codec"] }
