[package]
name = "ironmq-codec"
version = "0.1.1"
authors = ["Richard Jonas <richard.jonas.76@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
keywords = ["amqp", "messaging"]
repository = "https://github.com/jonasrichard/ironmq"
description = "IromMQ codec library"

[dependencies]
bitflags = "1.2"
bytes = "0.6"
futures = "0.3"
lazy_static = "1.4"
tokio-util = { version = "0.5", features = ["codec"] }
