[package]
name = "ironmq"
version = "0.0.1"
authors = ["Richard Jonas <richard.jonas@erlang-solutions.com>"]
edition = "2018"
license = "Apache-2.0"
keywords = ["amqp", "messaging"]
repository = "https://github.com/jonasrichard/ironmq"
description = "IromMQ server"

[dependencies]
bytes = "0.6.0"
env_logger = "0.7"
futures = "0.3"
ironmq-codec = { version = "0.0.1", path = "../ironmq-codec" }
log = "0.4"
tokio = { version = "0.3", features = ["full"] }
tokio-util = { version = "0.5", features = ["codec"] }
