[package]
name = "ironmq"
version = "0.1.0"
authors = ["Richard Jonas <richard.jonas@erlang-solutions.com>"]
edition = "2018"
license = "Apache-2.0"
keywords = ["amqp", "messaging"]
readme = "README.md"
repository = "https://github.com/jonasrichard/ironmq"
description = "IromMQ server"

[features]
default = []
integration-tests = []

[dependencies]
async-trait = "0.1"
bytes = "1"
env_logger = "0.8"
futures = "0.3"
ironmq-codec = { version = "0.2", path = "../ironmq-codec" }
log = "0.4"
tokio = { version = "1", features = ["macros", "net", "rt", "rt-multi-thread", "sync"] }
tokio-util = { version = "0.6", features = ["codec"] }
uuid = { version = "0.8", features = ["v4"] }

[dev-dependencies]
ironmq-client = { version = "0.2", path = "../ironmq-client" }
ironmq-test = { version = "0.1", path = "../ironmq-test" }
