[package]
name = "metalmq-client"
version = "0.2.0"
authors = ["Richard Jonas <richard.jonas.76@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
keywords = ["amqp", "messaging"]
repository = "https://github.com/jonasrichard/metalmq"
description = "IromMQ client library (AMQP 0.9)"

[features]
default = []
integration-tests = []

[dependencies]
bytes = "1"
env_logger = "0.8"
futures = "0.3"
metalmq-codec = { version = "0.2", path = "../metalmq-codec" }
log = "0.4"
tokio = { version = "1", features = ["macros", "net", "rt", "rt-multi-thread", "sync"] }
tokio-stream = "0.1"
tokio-util = { version = "0.6", features = ["codec"] }

[dev-dependencies]
lazy_static = "1.4"
