[package]
name = "metalmq-codec"
version = "0.3.0"
authors = ["Richard Jonas <richard.jonas.76@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
keywords = ["amqp", "messaging"]
repository = "https://github.com/jonasrichard/metalmq"
description = "MetalMQ codec library"

[dependencies]
bitflags = "2.1"
bytes = "1"
futures = "0.3"
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["codec"] }

[dev-dependencies]
bencher = "0.1"
tokio = { version = "1.0", features = ["macros", "rt"] }

[[bench]]
name = "encoder"
path = "benches/encode.rs"
harness = false
