[package]
name = "metalmq"
version = "0.3.0"
authors = ["Richard Jonas <richard.jonas.76@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
keywords = ["amqp", "messaging"]
readme = "../README.md"
repository = "https://github.com/jonasrichard/metalmq"
description = "MetalMQ server"

[features]
default = []
integration-tests = []

[dependencies]
anyhow = "1.0"
bytes = "1"
clap = { version = "4", features = ["derive", "usage"] }
env_logger = "0.10"
futures = "0.3"
hyper = { version = "0.14", features = ["full"] }
metalmq-codec = { version = "0.3", path = "../metalmq-codec" }
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "net", "rt", "rt-multi-thread", "signal", "sync"] }
tokio-util = { version = "0.7", features = ["codec"] }
toml = "0.7"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
metalmq-client = { version = "0.3", path = "../metalmq-client" }

#[[bench]]
#name = "client-state"
#path = "benches/state.rs"
#harness = false
