[package]
name = "metalmq"
version = "0.3.0"
authors = ["Richard Jonas <richard.jonas.76@gmail.com>"]
description = "MetalMQ server"
keywords = ["amqp", "messaging"]
edition = "2021"
repository = "https://github.com/jonasrichard/metalmq"
license = "Apache-2.0"
readme = "../README.md"

[features]
default = []
tracing = ["dep:console-subscriber", "tokio/tracing"]

[dependencies]
anyhow = "1.0"
bytes = "1"
clap = { version = "4", features = ["derive", "usage"] }
console-subscriber = { version = "0", optional = true }
env_logger = "0.11"
futures = "0.3"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1.3", features = ["tokio"] }
metalmq-codec = { version = "0.3", path = "../metalmq-codec" }
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "net", "rt", "rt-multi-thread", "signal", "sync"] }
tokio-util = { version = "0.7", features = ["codec"] }
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
http-body-util = "0.1.1"

[dev-dependencies]
metalmq-client = { version = "0.3", path = "../metalmq-client" }
